project e and c finished

--- a/project_c.html
+++ b/project_c.html
@@ -45,13 +45,13 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
-								<li><a href="#aboutthisproject"><span class="">About this Project</span></a></li>
-								<li><a href="#dashboard"><span>Tableau Dashboard</span></a></li>
-								<li><a href="#public"><span>Tableau Public</span></a></li>
-								<li><a href="#tasks"><span>Tasks</span></a></li>
-								<li><a href="#worksheets"><span>Worksheets</span></a></li>
-								<li><a href="#datasetsnapshot"><span>Dataset Snapshot</span></a></li>
-								<li><a href="#datasetinfodownload"><span>Dataset Info & Download</span></a></li>
+								<li><a href="#aboutthisproject"><span class="icon solid fa-book-open">About this Project</span></a></li>
+								<li><a href="#dashboard"><span class="icon solid fa-gauge">Tableau Dashboard</span></a></li>
+								<li><a href="#public"><span class="icon solid fa-table-columns">Tableau Public</span></a></li>
+								<li><a href="#tasks"><span class="icon solid fa-list-check">Tasks</span></a></li>
+								<li><a href="#worksheets"><span class="icon solid fa-chart-simple">Worksheets</span></a></li>
+								<li><a href="#datasetsnapshot"><span class="icon solid fa-table">Dataset Snapshot</span></a></li>
+								<li><a href="#datasetinfodownload"><span class="icon solid fa-download">Dataset Info & Download</span></a></li>
 							</ul>
 						</nav>
 				</div>
@@ -81,11 +81,12 @@
 						<img src="images/project_C_tableau/tableau_logo.png" alt="tableau_logo" />
 						<br>
 						<br>
-						<h3>Scenario</h3>
+						<h3>About</h3>
+                        <p>In this project, you will learn the basics of using Tableau, which is one of the most popular business intelligence tools out there, and you will learn how to use Tableau to visualize the popular citibike trips data-set. 
+							<br>You will learn how to import data, understand measures and dimensions, understand work-spaces, use filters, use sheets, and create and export dashboards.</p>
 						<br>
-                        <p>In this project, you will learn the basics of using Tableau, which is one of the most popular business intelligence tools out there, and you will learn how to use Tableau to visualize the popular citibike trips data-set.
-						</p>
-						<p>You will learn how to import data, understand measures and dimensions, understand work-spaces, use filters, use sheets, and create and export dashboards.</p>
+						<h3>Scenario</h3>
+						<p>Process and clean 800,000 records of Citibike trips in NYC, and present the data thorugh Tableau visualization to show cusomters' insights, activities, and popular bike stations.</p>
                     </div>
                 </section>
 
