--- a/project_e.html
+++ b/project_e.html
@@ -82,7 +82,7 @@
 						<br>
 						<h3>About</h3>
                         <p>In this project, you will learn the basics of using Microsoft Power BI, which is one of the most popular business intelligence tools out there, and you will learn how to use this software to import, transform, and  visualize the dataset.</p>
-						<h3>About</h3>
+						<h3>Scenario</h3>
                         <p>You will clean and analyze the data from a credit card company. Then, visualize the trends and patterns of company' credit card defaults.</p>
                     </div>
                 </section>
