--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
 							<!-- Second Section -->
 							<hr class="hline">
 							<br>
-							<h3>- Skill Showcase Projects -</h3>
+							<h3>- Skill Showcasing Projects -</h3>
 							<br>
 							<div class="row">
 								<!-- Row 2 -->
 								<!-- A -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_a.html" class="image fit"><img src="images/project_A_yelp/yelp.jpg" alt="yelp" /></a>
+										<a href="project_a.html" class="image fit"><img src="images/project_yelp/yelp.jpg" alt="yelp" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project A</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Yelp Relational Database <br>Business & User Analysis</strong></h3>
@@ -205,7 +205,7 @@
 								<!-- B -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_b.html" class="image fit"><img src="images/project_B_ibm_c2_excel/excel.jpg" alt="excel" /></a>
+										<a href="project_b.html" class="image fit"><img src="images/project_ibm_c2_excel/excel.jpg" alt="excel" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project B</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel Project <br>Government Fleet of vehicles</strong></h3>
@@ -223,7 +223,7 @@
 								<!-- C -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_c.html" class="image fit"><img src="images/project_C_tableau/dashboard.jpg" alt="tableau" /></a>
+										<a href="project_c.html" class="image fit"><img src="images/project_tableau/dashboard.jpg" alt="tableau" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project C</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Tableau Project <br>Citibike Trips</strong></h3>
@@ -243,23 +243,23 @@
 								<!-- D -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_d.html" class="image fit"><img src="images/project_D_logistics/dashboard.jpg" alt="logistics" /></a>
+										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/" alt="ibm_cognos" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project D</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Demand Analysis</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progress)</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li>Excel Data Analysis / PivotTable</li>
-										<li>Tableau Visualization</li>
-										<li>Logistics</li>
+										<li>IBM Cognos Analytics</li>
+										<li>Microsoft Excel</li>
+										<li>B.I. Dashboard & Visualization</li>
 									</ul>
 								</div>
 
 								<!-- E -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_e.html" class="image fit"><img src="images/project_E_powerBI_creditdefault/dashboard.jpg" alt="powerBI_1" /></a>
+										<a href="project_e.html" class="image fit"><img src="images/project_powerBI_creditdefault/dashboard.jpg" alt="powerBI_1_dashboard" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project E</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Power BI Visualization <br>Client Credit Card Defaults</strong></h3>
@@ -275,21 +275,40 @@
 								<!-- F -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="" class="image fit"><img src="images/" alt="powerBI_2" /></a>
+										<a href="project_f.html" class="image fit"><img src="images/project_powerBI_reports/" alt="power_BI_reports" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project F</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;"></strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progess)</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li></li>
-										<li></li>
-										<li></li>
+										<li>Microsoft Power BI</li>
+										<li>Power BI reports & dashboard</li>
+										<li>Business Intelligence</li>
 									</ul>
 								</div>
 
 							</div>
+							<br>
+							<div class="row">
+								<!-- Row 4 -->
+								<!-- G -->
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin-bottom: 5px;">
+										<a href="project_g.html" class="image fit"><img src="images/project_logistics/dashboard.jpg" alt="logistics" /></a>
+										<header style="background-color: rgb(68,68,68);">
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project G</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Demand Analysis</strong></h3>
+										</header>
+									</article>
+									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
+										<li>Excel Data Analysis / PivotTable</li>
+										<li>Tableau Visualization</li>
+										<li>Logistics</li>
+									</ul>
+								</div>
 
+							</div>
 							<br>
 							<hr class="hline">
 							<br>
