--- a/project_g.html
+++ b/project_g.html
@@ -182,7 +182,7 @@
                         </p>
                         <p>Total of 623,809 records - RateData.xlsx <br>
                             <a href="images/project_logistics/RateDataRaw.xlsx" download>[Download raw xlsx-file (31.5MB) here]</a> <br>
-                            <!--<a href="images/project_logistics/RateDataCleaned&PivotTable.xlsx" download>[Download cleaned xlsx-file (38.8MB) here]</a> -->
+                            <a href="images/project_logistics/RateDataCleaned&PivotTable.xlsx" download>[Download cleaned xlsx-file (38.8MB) here]</a>
                         </p>
 					</div>
 				</section>
