--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<!-- D -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/" alt="ibm_cognos" /></a>
+										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/temp_pic.jpg" alt="ibm_cognos" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project D</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progress)</strong></h3>
@@ -275,7 +275,7 @@
 								<!-- F -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_f.html" class="image fit"><img src="images/project_powerBI_reports/" alt="power_BI_reports" /></a>
+										<a href="project_f.html" class="image fit"><img src="images/project_powerBI_reports/temp_pic.jpg" alt="power_BI_reports" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project F</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progess)</strong></h3>
