--- a/project_g.html
+++ b/project_g.html
@@ -80,10 +80,12 @@
                         <img src="images/project_logistics/excel_logo.png" alt="excel_logo" />
 						<br>
 						<br>
+						<h3>About</h3>
+                        <p>In this project, you will learn the basics of using Tableau, which is one of the most popular business intelligence tools out there, and you will learn how to use Tableau to visualize the .... 
+							<br>You will learn how to import data, understand measures and dimensions, understand work-spaces, use filters, use sheets, and create and export dashboards.</p>
+						<br>
 						<h3>Scenario</h3>
-						<p>You oversee the North American logistics operations for a naton-wide retailer selling various imports products. 
-                            The congestion at ports, and skyrocketing fuel and transportation costs, has created the need for your company to rethink how your're currently importing and distributing your products throughout the US to continue to meet the demands of your customers. <br>
-                            You have been given the raw datasets and have been asked to clean, analyze the data and transform them into meaningful insights, trends, and patterns and present to company's executives. </p>
+						<p></p>
                     </div>
                 </section>
 
