--- a/index.html
+++ b/index.html
@@ -205,16 +205,16 @@
 								<!-- B -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_b.html" class="image fit"><img src="images/project_ibm_c2_excel/excel.jpg" alt="excel" /></a>
+										<a href="project_b.html" class="image fit"><img src="images/project_excel_viz/excel_post.jpg" alt="excel" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project B</strong></h3>
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel Project <br>Government Fleet of vehicles</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li>Pivot Table</li>
-										<li>VLOOKUP/HLOOKUP/XLOOKUP</li>
-										<li>Data cleaning</li>
+										<li>Excel Pivot Tables</li>
+										<li>Excel Visualization</li>
+										<li>Excel Dashboard</li>
 									</ul>
 								</div>
 
@@ -305,6 +305,22 @@
 										<li>Excel Data Analysis / PivotTable</li>
 										<li>Tableau Visualization</li>
 										<li>Logistics</li>
+									</ul>
+								</div>
+
+								<!-- H -->
+								<div class="col-4 col-12-mobile">
+									<article class="item" style="margin-bottom: 5px;">
+										<a href="project_h.html" class="image fit"><img src="images/project_ibm_c2_excel/excel.jpg" alt="excel" /></a>
+										<header style="background-color: rgb(68,68,68);">
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project H</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel Project <br>Government Fleet of vehicles</strong></h3>
+										</header>
+									</article>
+									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
+										<li>Pivot Table</li>
+										<li>VLOOKUP/HLOOKUP/XLOOKUP</li>
+										<li>Data cleaning</li>
 									</ul>
 								</div>
 
