--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li>SQL</li>
-										<li>SQLite</li>
+										<li>SQL / SQLite</li>
+										<li>RDBMS</li>
 										<li>Sublime Text</li>
 									</ul>
 								</div>
