--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 										<a href="project_b.html" class="image fit"><img src="images/project_excel_viz/excel_post.jpg" alt="excel" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project B</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel Project <br>Car Manufarturer Sales & Retention Price</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel Project <br>Car Manufarturers Price & Retention</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
