--- a/project_b.html
+++ b/project_b.html
@@ -81,12 +81,8 @@
 						<img src="images/project_excel_viz/excel_logo.png" alt="tableau_logo" />
 						<br>
 						<br>
-						<h3>About</h3>
-                        <p>In this project, you will learn the basics of using Tableau, which is one of the most popular business intelligence tools out there, and you will learn how to use Tableau to visualize the popular citibike trips data-set. 
-							<br>You will learn how to import data, understand measures and dimensions, understand work-spaces, use filters, use sheets, and create and export dashboards.</p>
-						<br>
 						<h3>Scenario</h3>
-						<p>Process and clean 800,000 records of Citibike trips in NYC, and present the data thorugh Tableau visualization to show cusomters' insights, activities, and popular bike stations.</p>
+						<p>Process and clean the car sales dataset of 30 car manufacturers, visualize the difference between German and Japanese car makers <br>in their sales price, year resales value, and retention value percentage. <br>Then, visualize it within Excel software.</p>
                     </div>
                 </section>
 
@@ -96,7 +92,7 @@
                         <header>
                             <h2>Excel Dashboard <br>Sales, Year Resales Price, and Retention Value % for Car Manufarturers</h2>
                         </header>
-						<img src="images/project_excel_viz/dashboard.png" alt="dashboard" style="border: 5px solid black; width: 100%;">
+						<img src="images/project_excel_viz/dashboard.png" alt="dashboard" style="border: 5px solid black; width: 88%;">
                     </div>
                 </section>
 
@@ -123,9 +119,9 @@
                         <div>
                             <h3>German Car Manufacturers</h3>
                             <br>
-                            <img src="images/project_excel_viz/german_cars.png" alt="calculated_values" style="width: 69%;">
+                            <img src="images/project_excel_viz/german_cars.png" alt="calculated_values" style="width: 62%;">
                             <p>Figure 1 supports Visual A (top-left corner)</p>
-                            <img src="images/project_excel_viz/german_sales.png" alt="calculated_values" style="width: 30%;">
+                            <img src="images/project_excel_viz/german_sales.png" alt="calculated_values" style="width: 26%;">
                             <p>Figure 2 supports Visual B (top-right corner)</p>
                         </div>
                         <br>
@@ -133,26 +129,16 @@
                         <div>
                             <h3>Japanese Car Manufacturers</h3>
                             <br>
-                            <img src="images/project_excel_viz/japanese_cars.png" alt="calculated_values" style="width: 69%;">
+                            <img src="images/project_excel_viz/japanese_cars.png" alt="calculated_values" style="width: 62%;">
                             <p>Figure 3 supports Visual C (bottom-left corner)</p>
-                            <img src="images/project_excel_viz/japanese_sales.png" alt="calculated_values" style="width: 30%;">
+                            <img src="images/project_excel_viz/japanese_sales.png" alt="calculated_values" style="width: 26%;">
                             <p>Figure 4 supports Visual D (bottom-right corner)</p>
                         </div>
                     </div>
                 </section>
-
-                <!-- Conclusions -->
-				<section id="worksheets" class="six">
-                    <div class="container">
-                        <header>
-                            <h2>Conclusions</h2>
-                        </header>
-
-                    </div>
-                </section>
 				
 				<!-- Dataset Info & Download -->
-				<section id="datasetinfodownload" class="seven">
+				<section id="datasetinfodownload" class="six">
 					<div class="container">
 						<header>
                             <h2>Dataset Download</h2>
