--- a/project_b.html
+++ b/project_b.html
@@ -46,12 +46,10 @@
 							<ul>
 								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject"><span class="icon solid fa-book-open">About this Project</span></a></li>
-								<li><a href="#dashboard"><span class="icon solid fa-gauge">Tableau Dashboard</span></a></li>
-								<li><a href="#public"><span class="icon solid fa-table-columns">Tableau Public</span></a></li>
-								<li><a href="#tasks"><span class="icon solid fa-list-check">Tasks</span></a></li>
-								<li><a href="#worksheets"><span class="icon solid fa-chart-simple">Worksheets</span></a></li>
+								<li><a href="#dashboard"><span class="icon solid fa-gauge">Excel Dashboard</span></a></li>
 								<li><a href="#datasetsnapshot"><span class="icon solid fa-table">Dataset Snapshot</span></a></li>
-								<li><a href="#datasetinfodownload"><span class="icon solid fa-download">Dataset Info & Download</span></a></li>
+								<li><a href="#pivots"><span class="icon solid fa-chart-simple">Pivot Tables</span></a></li>
+								<li><a href="#datasetinfodownload"><span class="icon solid fa-download">Dataset Download</span></a></li>
 							</ul>
 						</nav>
 				</div>
@@ -110,7 +108,7 @@
                 </section>
 
 				<!-- Pivot Tables -->
-				<section id="worksheets" class="five">
+				<section id="pivots" class="five">
                     <div class="container">
                         <header>
                             <h2>Pivot Tables</h2>
@@ -137,7 +135,7 @@
                     </div>
                 </section>
 				
-				<!-- Dataset Info & Download -->
+				<!-- Dataset Download -->
 				<section id="datasetinfodownload" class="six">
 					<div class="container">
 						<header>
