--- a/project_h.html
+++ b/project_h.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>Kien's Project B</title>
+		<title>Kien's Project H</title>
 		<!-- Icon to show next to browser title aka Favicon-->
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon1_io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon1_io/favicon-32x32.png">
