--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 								<!-- <p>Think of <br>data <strong>(crude oil)</strong> and we the analyst turn them into information <strong>(gasoline and jet fuels)</strong><br>to help business' decision making and contribute to the future planning <strong>(the next thousand miles)</strong></p> -->
 							</header>
 							<footer>
-								<a href="#portfolio" class="button scrolly">Explore " My Portfolio "</a>
+								<a href="#portfolio" class="button scrolly">Explore my Portfolio</a>
 								<br>
 								<br>
-								<a href="#resume">[ Jump to "My Résumé" ]</a>
+								<a href="#resume">Jump to My Résumé</a>
 							</footer>
 							<div>
 								<img class="qrcode" src="images/qr_codes/qrcodeB.png" style="padding: 3px;" alt="qr_code">
@@ -557,7 +557,7 @@
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Build Dashboards with Power BI <br>Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="" target="_blank" class="image fit frame"><img src="images/coursera/" alt="powerBI_certificate_2" /></a>
+										<a href="https://coursera.org/verify/VE2YKAAEN9FU" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate_powerBI_2.jpeg" alt="powerBI_certificate_2" /></a>
 									</article>
 								</div>
 
