--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
 								<!-- Coursera Project Network 1 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
-										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
+										<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank" class="image fit"><img src="images/coursera/tableau.jpg" alt="coursera_logo" /></a>
+										<header style="background-color: rgb(32,68,126); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/visualizing-citibike-trips-tableau" target="_blank">
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Visualizing with Tableau <br>Certificate</strong></h3>
 											</a>
@@ -536,10 +536,10 @@
 								<!-- Coursera Project Network 2 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
-										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
+										<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank" class="image fit"><img src="images/coursera/powerBI.jpg" alt="coursera_logo" /></a>
+										<header style="background-color: rgb(255,210,12); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/power-bi-desktop" target="_blank">
-												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Getting Started with Power BI <br>Certificate</strong></h3>
+												<h3 style="padding: 0.25em;"><strong style="color: black !important;">- ABOUT THIS PROGRAM - <br>Getting Started with Power BI <br>Certificate</strong></h3>
 											</a>
 										</header>
 										<a href="https://coursera.org/verify/9TCJGTUQYD75" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate_powerBI.jpeg" alt="powerBI_certificate_1" /></a>
@@ -551,10 +551,10 @@
 								<!-- Coursera Project Network 3 -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin: 20px 0px;">
-										<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank" class="image fit"><img src="images/coursera/coursera.jpg" alt="coursera_logo" /></a>
-										<header style="background-color: rgb(56,45,139); margin: 1px 0px;">
+										<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank" class="image fit"><img src="images/coursera/powerBI.jpg" alt="coursera_logo" /></a>
+										<header style="background-color: rgb(255,210,12); margin: 1px 0px;">
 											<a href="https://www.coursera.org/projects/build-dashboards-power-bi" target="_blank">
-												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>Build Dashboards with Power BI <br>Certificate</strong></h3>
+												<h3 style="padding: 0.25em;"><strong style="color: black !important;">- ABOUT THIS PROGRAM - <br>Build Dashboards with Power BI <br>Certificate</strong></h3>
 											</a>
 										</header>
 										<a href="https://coursera.org/verify/VE2YKAAEN9FU" target="_blank" class="image fit frame"><img src="images/coursera/coursera_Certificate_powerBI_2.jpeg" alt="powerBI_certificate_2" /></a>
