--- a/index.html
+++ b/index.html
@@ -275,16 +275,16 @@
 								<!-- F -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_f.html" class="image fit"><img src="images/project_powerBI_reports/temp_pic.jpg" alt="power_BI_reports" /></a>
+										<a href="project_f.html" class="image fit"><img src="images/project_powerBI_population/dashboard.jpg" alt="power_BI_reports" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project F</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progess)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Power BI Reports & Dashboard <br>Worldwide Population</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
 										<li>Microsoft Power BI</li>
-										<li>Power BI reports & dashboard</li>
-										<li>Business Intelligence</li>
+										<li>Generate reports</li>
+										<li>Create dashboard</li>
 									</ul>
 								</div>
 
