project d poster and initialize

--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@
 								<!-- D -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/temp_pic.jpg" alt="ibm_cognos" /></a>
+										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/poster.jpg" alt="ibm_cognos" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project D</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">(In Progress)</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">IBM Cognos Analytics <br>Automotive Sales & Recalls</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
 										<li>IBM Cognos Analytics</li>
-										<li>Microsoft Excel</li>
+										<li>Cosnos AI Assistant</li>
 										<li>B.I. Dashboard & Visualization</li>
 									</ul>
 								</div>
