--- a/project_b.html
+++ b/project_b.html
@@ -76,7 +76,7 @@
 							<br>
 							<h4>The purpose of this project is to showcase my skills and knowledge in Microsoft Data Analysis & Data Visualization</h4>
                         </header>
-						<img src="images/project_excel_viz/excel_logo.png" alt="tableau_logo" />
+						<img src="images/project_excel_viz/excel_logo.png" alt="excel_logo" />
 						<br>
 						<br>
 						<h3>Scenario</h3>
