--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
 										<li>IBM Cognos Analytics</li>
-										<li>Cosnos AI Assistant</li>
+										<li>Cognos AI Assistant</li>
 										<li>B.I. Dashboard & Visualization</li>
 									</ul>
 								</div>
